[project]
name = "code-reviewer"
version = "0.1.0"
description = "A two-agent (Coder + Reviewer) LangGraph that iteratively writes and critiques Python until approved."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.55",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
code-reviewer = "code_reviewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
